--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
 Boris Pavlovic <boris@pavlovic.me>
+Eugene Konstantinov <ekonstantinov@mirantis.com>
+Alexei Kornienko <akornienko@mirantis.com>
+Mikhail Dubov <mdubov@mirantis.com>
