Add author and fix .gitignore

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ Boris Pavlovic <boris@pavlovic.me>
 Eugene Konstantinov <ekonstantinov@mirantis.com>
 Alexei Kornienko <akornienko@mirantis.com>
 Mikhail Dubov <mdubov@mirantis.com>
+Brandon Clifford <bclifford@bluehost.com>
