Add self to AUTHORS file
Update AUTHORS file to identify myself as a contributor.
I will be assisting with some efforts in Rally.

Change-Id: I63f32f4aacd3e8ada9a81a68d4cf9a84a31cdf17

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ Eugene Konstantinov <ekonstantinov@mirantis.com>
 Alexei Kornienko <akornienko@mirantis.com>
 Mikhail Dubov <mdubov@mirantis.com>
 Brandon Clifford <bclifford@bluehost.com>
+Boden Russell <boden@linux.vnet.ibm.com>
