[Docs] Various fixes
* Remove obsolete rst files
* Structural changes: added a folder "miscellaneous" for articles not included
  in the main tree
* Small fixes in rst files that resulted in warnings while building the docs
* Task templates lesson is now the 4th in the tutorial

Change-Id: Id1db7e2337ca8266352a5ede68c66e4b3739335b

--- a/doc/release_notes/archive/v0.0.2.rst
+++ b/doc/release_notes/archive/v0.0.2.rst
@@ -118,13 +118,13 @@ Plugins
 
     [fix] CinderVolumes.create_and_attach_volume
 
-        Pass optional **kwargs only to create server command
+        Pass optional \*\*kwargs only to create server command
 
     [fix]  GlanceImages.create_image_and_boot_instances
 
-        Pass optional **kwargs only to create server command
+        Pass optional \*\*kwargs only to create server command
 
-    [fix] TempestScenario.* removed stress cleanup.
+    [fix] TempestScenario.\* removed stress cleanup.
 
         Major issue is that tempest stress cleanup cleans whole OpenStack.
         This is very dangerous, so it's better to remove it and leave some
@@ -132,7 +132,7 @@ Plugins
 
     [improved] NovaSecGroup.boot_and_delete_server_with_secgroups
 
-        Add optional **kwargs that are passed to boot server comment
+        Add optional \*\*kwargs that are passed to boot server comment
 
 
 * **Benchmark Context**:
