Fix release 0.2.0 notes
The code block is not properly displayed

Change-Id: Ie601f528c28e839b890271e7fe461962336a9ac7

--- a/doc/release_notes/archive/v0.2.0.rst
+++ b/doc/release_notes/archive/v0.2.0.rst
@@ -80,23 +80,22 @@ Rally Task
   Here is a simple example how output can be added in any
   scenario plugin:
 
-.. code-block::
+  .. code-block:: python
 
-  # This represents a single X point in result StackedArea.
-  # Values from other X points are taken from other iterations.
-  self.add_output(additive={"title": "How do A and B changes",
-                            "description": ("Trend for A and B "
-                                            "during the scenario run"),
-                            "chart_plugin": "StackedArea",
-                            "data": [["foo", 42], ["bar", 24]]})
-
-  # This is a complete Pie chart that belongs to this concrete iteration
-  self.add_output(
-      complete={"title": "",
-                "description": ("Complete results for Foo and Bar "
-                                "from this iteration"),
-                "chart_plugin": "Pie",
-                "data": [["foo", 42], ["bar", 24]]})
+    # This represents a single X point in result StackedArea.
+    # Values from other X points are taken from other iterations.
+    self.add_output(additive={"title": "How do A and B changes",
+                              "description": ("Trend for A and B "
+                                              "during the scenario run"),
+                              "chart_plugin": "StackedArea",
+                              "data": [["foo", 42], ["bar", 24]]})
+    # This is a complete Pie chart that belongs to this concrete iteration
+    self.add_output(
+        complete={"title": "",
+                  "description": ("Complete results for Foo and Bar "
+                                  "from this iteration"),
+                  "chart_plugin": "Pie",
+                  "data": [["foo", 42], ["bar", 24]]})
 
 Rally Certification
 ~~~~~~~~~~~~~~~~~~~
