Fix typos in Rally files
TrivialFix

Change-Id: I621ac811a1aee25da5cd7174c73aa5bd2962353f

--- a/doc/release_notes/archive/v0.1.0.rst
+++ b/doc/release_notes/archive/v0.1.0.rst
@@ -82,7 +82,7 @@ New Features & API changes
 
     This was done to:
 
-    * avoid doing rally.benchamrk.scenarios import base as scenario_base
+    * avoid doing rally.benchmark.scenarios import base as scenario_base
 
     * remove one level of nesting
 
@@ -333,7 +333,7 @@ Specs & Feature requests
 
   [feature request] Allows specific repos & packages in install-rally.sh
 
-  [feature request] Add abbility to caputre logs from tested services
+  [feature request] Add ability to capture logs from tested services
 
   [feature request] Check RPC queue perfdata
 
