Fix typos in release note
Fix typos in release note.

Change-Id: I8ba05e83401e84c7c53305590aec5abc33209c5d

--- a/doc/release_notes/archive/v0.1.2.rst
+++ b/doc/release_notes/archive/v0.1.2.rst
@@ -88,7 +88,7 @@ Rally Task
 
 * Move rally.osclients.Clients to plugin base
 
-  Rally OSclients is plugable now and it is very easy to extend OSClients for
+  Rally OSclients is pluggable now and it is very easy to extend OSClient for
   your cloud out of Rally tree.
 
 * Add 'merge' functionality to SLA
